manifests/edge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qoves-edge
  labels:
    pod-security.kubernetes.io/enforce: restricted
