manifests/edge/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: qoves-edge
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: consumer-egress-api
  namespace: qoves-edge
spec:
  podSelector:
    matchLabels:
      app: healthz-consumer
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.49.2/32
      ports:
        - port: 80
          protocol: TCP
